clusters/vmi3474918/routing/pong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-host
  namespace: pong
  labels:
    belacca.com/project: pong
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pong.belacca.com
  rules:
    - host: pong.belacca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pong-gateway
                port:
                  number: 80
